<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
   android:stretchColumns="*"
   style="@style/FCPBackground">
   <TableRow android:layout_height="fill_parent" 
   android:padding="4dip">
   		<Button android:id="@+id/prescribe" android:text="@string/prescribe"  android:layout_width="fill_parent" android:layout_height="fill_parent" android:background="@drawable/fcp_button_large"/>
        <Button android:id="@+id/diagnose" android:text="@string/diagnose" android:layout_width="fill_parent"  android:layout_height="fill_parent" android:background="@drawable/fcp_button_large"/>
   </TableRow>
   <TableRow android:layout_height="fill_parent"
   android:padding="4dip">
   		<Button android:id="@+id/test" android:text="@string/test"  android:layout_width="fill_parent" android:layout_height="fill_parent" android:background="@drawable/fcp_button_large"/>
        <Button android:id="@+id/treat" android:text="@string/treat"  android:layout_width="fill_parent" android:layout_height="fill_parent" android:background="@drawable/fcp_button_large"/>
   </TableRow>
   <TableRow android:layout_height="fill_parent"
   android:padding="4dip">
   		<Button android:id="@+id/refer" android:text="@string/refer"  android:layout_width="fill_parent" android:layout_height="fill_parent" android:background="@drawable/fcp_button_large"/>
        <Button android:id="@+id/note" android:text="@string/note"  android:layout_width="fill_parent" android:layout_height="fill_parent" android:background="@drawable/fcp_button_large"/>
   </TableRow>
  <!--  <TableRow android:layout_height="fill_parent">
   		<MessageSearchView android:id="@+id/message_search"/>
   </TableRow> -->
</TableLayout>
