<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    style="@style/FCPBackground">
	<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	   android:layout_width="fill_parent"
	   android:layout_height="wrap_content"
	   android:layout_weight="0.05"
	   android:padding="2px">
	   <TableRow android:layout_height="wrap_content" android:layout_width="fill_parent" android:theme="@style/Message" android:padding="2px">
	      <LinearLayout android:padding="2px">
	   		<Button android:id="@+id/all" android:text="@string/all" android:width="100px" android:layout_width="100px" android:layout_height="35px" android:background="@drawable/fcp_button"/>
	      </LinearLayout>
	       <LinearLayout android:padding="2px">
	   		<Button android:id="@+id/referrals" android:text="@string/referrals" android:width="100px"  android:layout_width="100px" android:layout_height="35px" android:background="@drawable/fcp_button"/>
	      </LinearLayout>
	       <LinearLayout android:padding="2px">
	        <Button android:id="@+id/diagnoses" android:text="@string/diagnoses" android:width="100px" android:layout_width="100px" android:layout_height="35px" android:color="#cac" android:background="@drawable/fcp_button"/>
		  </LinearLayout>
	   </TableRow>
	   <TableRow android:layout_height="wrap_content" android:layout_width="fill_parent" android:theme="@style/Message" android:padding="2px">
	   		 <LinearLayout android:padding="2px">
	   		<Button android:id="@+id/labs" android:text="@string/labs" android:width="100px"  android:layout_width="100px" android:layout_height="35px" android:background="@drawable/fcp_button"/>
	        </LinearLayout>
	         <LinearLayout android:padding="2px">
	        <Button android:id="@+id/prescriptions" android:text="@string/prescriptions" android:width="100px" android:layout_width="100px"  android:layout_height="35px" android:background="@drawable/fcp_button"/>
	         </LinearLayout>
	         <LinearLayout android:padding="2px">
	        <Button android:id="@+id/treatments" android:text="@string/treatments"  android:width="100px" android:layout_width="100px" android:layout_height="35px" android:background="@drawable/fcp_button"/>
			</LinearLayout>
	   </TableRow>
	   <TableRow android:layout_height="wrap_content" android:layout_width="fill_parent" android:theme="@style/Sort" android:padding="2px">
	   <TextView android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/order_by" />
	   </TableRow>
	   <TableRow android:layout_height="wrap_content" android:layout_width="fill_parent" android:padding="2px">
	   	 <LinearLayout android:padding="2px">
	        <Button android:id="@+id/date" android:text="@string/date"  android:width="100px" android:layout_width="100px" android:layout_height="35px" android:background="@drawable/fcp_button_secondary"/>
	     </LinearLayout>
	      <LinearLayout android:padding="2px">
	        <Button android:id="@+id/type" android:text="@string/type"  android:width="100px" android:layout_width="100px" android:layout_height="35px" android:background="@drawable/fcp_button_secondary"/>
	     </LinearLayout>
	      <LinearLayout android:padding="2px">
	        <Button android:id="@+id/name" android:text="@string/name"  android:width="100px" android:layout_width="100px" android:layout_height="35px" android:background="@drawable/fcp_button_secondary"/>
	  	  </LinearLayout>
	   </TableRow>
	</TableLayout>
	  <ListView class="org.freeclinic.android.component.view.MessageListView" 
	  		android:id="@android:id/list"
	        android:layout_width="fill_parent"
	        android:layout_height="0dip"
	        android:layout_weight="0.95"/>
</LinearLayout>