<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
   style="@style/FCPBackground">

	<TextView
	    android:layout_width="fill_parent"
	   android:layout_height="wrap_content"
	   android:textColor="@color/royal_blue"
	   android:textSize="28sp"
	   android:textStyle="italic"
		android:id="@+id/title"
		android:text="@string/login_title" 
		android:textAlign="center"
		android:paddingTop="20dip"
		android:paddingBottom="20dip"/>

<TableLayout android:id="@+id/table"
	    android:layout_width="fill_parent"
	   android:layout_height="wrap_content"
	   android:layout_below="@id/title"
	   android:paddingTop="90dip">
   <TableRow android:id="@+id/user_row"
   android:layout_width="wrap_content"
   android:layout_height="wrap_content"
   android:paddingBottom="10dip">
       <TextView
       	   android:id="@+id/user_prompt"
           android:text="@string/user"
           android:textStyle="bold"
           android:textAlign="end"
           android:paddingRight="10dip" 
           android:paddingLeft="10dip"
           android:layout_width="120dip"
           android:layout_height="10dip"
           android:textColor="@color/royal_blue"
           android:textSize="20dip"/>

       <EditText android:id="@+id/username"
           style="@style/FCPEditText"
           android:text="@string/username_text"
           android:hint="@string/user_hint"
           android:scrollHorizontally="true" 
           android:paddingLeft="8dip"
           android:width="150dip"
           />
   </TableRow>

   <TableRow android:id="@+id/pass_row" 
   android:layout_width="wrap_content"
   android:layout_height="wrap_content">
       <TextView
       	   android:id="@+id/pass_prompt"
           android:text="@string/password"
           android:textStyle="bold"
           android:textAlign="end"
           android:paddingRight="10dip" 
           android:paddingLeft="10dip"
           android:layout_width="120dip"
           android:layout_height="10dip"
           android:textColor="@color/royal_blue"
           android:textSize="20dip"/>

       <EditText android:id="@+id/password"
           style="@style/FCPEditText"
           android:text="@string/password_text"
           android:hint="@string/password_hint"
           android:password="true"
           android:scrollHorizontally="true" 
           android:paddingLeft="8dip"
           android:width="150dip"/>
   </TableRow>
   <TableRow android:id="@+id/login_row" 
   android:layout_width="fill_parent"
   android:layout_height="wrap_content"
   android:gravity="center"
   android:paddingTop="105dip">	
   <Button android:id="@+id/login"
       android:text="@string/login" 
       android:layout_width="wrap_content"
	   android:layout_height="wrap_content"
	   android:background="@drawable/fcp_button"
       android:layout_centerHorizontal="true"/>
    </TableRow>   
    <TableRow android:id="@+id/register_row" 
   android:layout_width="fill_parent"
   android:layout_height="wrap_content"
   android:gravity="center"
   android:paddingTop="10dip">	
	   <Button android:id="@+id/register" 
	   android:text="@string/register_button" 
	   android:layout_width="wrap_content" 
	   android:layout_height="wrap_content"
	   android:background="@drawable/fcp_button"
	   android:layout_centerHorizontal="true"/>
    </TableRow>  
    </TableLayout>
</RelativeLayout>
